external-crates/move/crates/move-compiler/tests/iota_mode/authenticator_attribute/parameterized/version_literals.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: iota
  edition: legacy
  lint: false
---
error[E10003]: invalid attribute value
  ┌─ tests/iota_mode/authenticator_attribute/parameterized/version_literals.move:8:29
  │
8 │   #[authenticator(version = 3u16)]
  │                             ^^^^ Only unannotated or u8 literal `version` values are supported.

error[E10003]: invalid attribute value
   ┌─ tests/iota_mode/authenticator_attribute/parameterized/version_literals.move:11:29
   │
11 │   #[authenticator(version = 3u32)]
   │                             ^^^^ Only unannotated or u8 literal `version` values are supported.

error[E10003]: invalid attribute value
   ┌─ tests/iota_mode/authenticator_attribute/parameterized/version_literals.move:14:29
   │
14 │   #[authenticator(version = 3u64)]
   │                             ^^^^ Only unannotated or u8 literal `version` values are supported.

error[E10003]: invalid attribute value
   ┌─ tests/iota_mode/authenticator_attribute/parameterized/version_literals.move:17:29
   │
17 │   #[authenticator(version = 3u128)]
   │                             ^^^^^ Only unannotated or u8 literal `version` values are supported.

error[E10003]: invalid attribute value
   ┌─ tests/iota_mode/authenticator_attribute/parameterized/version_literals.move:20:29
   │
20 │   #[authenticator(version = 3u256)]
   │                             ^^^^^ Only unannotated or u8 literal `version` values are supported.
